--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <img src ="https://avatars.githubusercontent.com/u/83592667?v=4">
       
       <ol>
-        <li> Google Docs </li>
-        <li> Google Slides </li>
-        <li> Khan Academy </li>
+        <li><a href ="https://www.wordreference.com/"> WordRefrence </a></li>
+        <li><a href ="https://www.deepl.com/en/translator"> DeepL Translate </a></li>
+        <li><a href ="https://bonpatron.com/en/"> BonPatron </a></li>
       </ol>
       
     </body>
