--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
       
         <title>My awesome web page</title>
+        <link rel="stylesheet" href="style.css">
       
     </head>
   
